--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,16 @@
+<html>
+<head>
+
+</head>
+
+<body>
+
+
 <h1>IS445 HW 3 SOLUTIONS</h1>
 
-<a href = "ex1.html"> Exercise 1 solution</a> 
+<h2><a href = "ex1.html"> Exercise 1 solution</a></h2>
+<h2><a href = "ex2.html"> Exercise 2 solution</a></h2>
+
+
+</body>
+</html>
