--- a/html/ex1.html
+++ b/html/ex1.html
@@ -1,1 +1,11 @@
-<H1><a href = "index.html">Back To Home</a></H1>
+<html>
+<head>
+</head>
+
+
+<body>
+    <H1><a href = "index.html">Back To Home</a></H1>
+    <script src= "../js/ex1.js"></script>
+</body>
+
+</html>
