--- a/html/ex1.html
+++ b/html/ex1.html
@@ -4,7 +4,7 @@
 
 
 <body>
-    <H1><a href = "index.html">Back To Home</a></H1>
+    <H1><a href = "../index.html">Back To Home</a></H1>
     <script src= "../js/ex1.js"></script>
 </body>
 
