--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <h1>IS445 HW 3 SOLUTIONS</h1>
 
-<h2><a href = "ex1.html"> Exercise 1 solution</a></h2>
-<h2><a href = "ex2.html"> Exercise 2 solution</a></h2>
+<h2><a href = "html/ex1.html"> Exercise 1 solution</a></h2>
+<h2><a href = "html/ex2.html"> Exercise 2 solution</a></h2>
 
 
 </body>
