--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-
+<Title>
+  Bryan Wong HW3
+</Title>
 </head>
 
 <body>
@@ -10,7 +12,8 @@
 
 <h2><a href = "html/ex1.html"> Exercise 1 solution</a></h2>
 <h2><a href = "html/ex2.html"> Exercise 2 solution</a></h2>
-
+<h2><a href = "html/ex3.html"> Exercise 3 solution</a></h2>
+<h2><a href = "html/ex4.html"> Exercise 4 solution</a></h2>
 
 </body>
 </html>
