--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <h2><a href = "html/ex2.html"> Exercise 2 solution</a></h2>
 <h2><a href = "html/ex3.html"> Exercise 3 solution</a></h2>
 <h2><a href = "html/ex4.html"> Exercise 4 solution</a></h2>
-
+<h2><a href = "html/ex5.html"> Exercise 5 solution</a></h2>
+<h2><a href = "html/ex6.html"> Exercise 6 solution</a></h2>
 </body>
 </html>
